--- a/src/client/src/components/commentsModal/ModalForComments.module.css
+++ b/src/client/src/components/commentsModal/ModalForComments.module.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 60;
+  z-index: var(--secondLayer);
 
   font-family: var(--textFont);
 
