--- a/src/client/src/components/leaderboard/leaderboard.module.css
+++ b/src/client/src/components/leaderboard/leaderboard.module.css
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 60;
+    z-index: var(--secondLayer);
 
     padding: 10px;
     font-family: var(--universalFont);
