--- a/src/client/src/pages/homeMenu/PageComponents/latestGame/latestGame.module.css
+++ b/src/client/src/pages/homeMenu/PageComponents/latestGame/latestGame.module.css
@@ -1,5 +1,4 @@
 .latestGameContainer {
-  composes: flexCenter from "../../../../global.css";
   position: absolute;
 
   top: 12vh;
@@ -25,11 +24,17 @@
   background-size: cover;
   background-image: url("../../images/games/wallpapers/1.jpg");
 }
+.content{
+  position: absolute;
+  composes: flexCenter from "../../../../global.css";
+  width: 100%;
+  height: 100%;
+  z-index: var(--thirdLayer);
+}
 
 .leftContainer {
   width: 40%;
   height: 90%;
-  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -42,7 +47,6 @@
   position: relative;
   width: 40%;
   height: 90%;
-  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -64,7 +68,6 @@
   position: absolute;
   width: 92%;
   height: 92%;
-  z-index: 2;
 }
 
 .buttonDiv {
@@ -76,7 +79,7 @@
 
 
 @media (max-width: 1050px) {
-  .latestGameContainer{
+  .content{
     flex-direction: column;
   }
   .leftContainer{
@@ -108,7 +111,7 @@
   }
 }
 @media (max-width: 480px){
-  .latestGameContainer{
+  .content{
     justify-content: flex-start;
   }
   .rightContainer{
@@ -128,11 +131,17 @@
   .rightContainer{
     display: none;
   }
-  .latestGameContainer{
+  .content{
     justify-content: flex-start;
   }
   .leftContainer{
     height: 80%;
+  }
+}
+@media (max-height: 760px) {
+  .descriptionDiv{
+    overflow-y: scroll;
+    height: 50%;
   }
 }
 
