--- a/src/client/src/pages/homePage/components/homePagelnterface/homePageInterface.module.css
+++ b/src/client/src/pages/homePage/components/homePagelnterface/homePageInterface.module.css
@@ -82,7 +82,7 @@
   cursor: pointer;
   color: var(--iconOrangeColor);
 
-  z-index: 50;
+  z-index: var(--secondLayer);
 
   left: 10px;
   transition: 0.3s;
